infrastructure/tpi-1/fluxcd-notifications/repo-webhook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.${domain_wahoo_li:=wahoo.li}
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,192.30.252.0/22,185.199.108.0/22,140.82.112.0/20,143.55.64.0/20,2a0a:a440::/29,2606:50c0::/32"
spec:
  rules:
  - host: ${repository_webhook_host}
    http:
      paths:
      - pathType: Prefix
        path: /hook/
        backend:
          service:
            name: notification-controller
            port:
              number: 80
  tls:
  - hosts:
    - ${repository_webhook_host}
